Replace androidTestApi configuration with androidTestImplementation
Recent versions of the Android Gradle Plugin print the following
warning during a Gradle sync:

"Configuration 'androidTestApi' is obsolete and has been replaced
with 'androidTestImplementation'."

This commit updates Gradle scripts, the plugin and a test to the
recommended configuration.

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -40,13 +40,13 @@ android {
 }
 
 dependencies {
-  androidTestApi deps.dexmaker
-  androidTestApi deps.dexmakerDx
+  androidTestImplementation deps.dexmaker
+  androidTestImplementation deps.dexmakerDx
 
-  androidTestApi deps.espresso
-  androidTestApi deps.mockito
-  androidTestApi deps.dexmakerMockito
-  androidTestApi deps.hamcrest
+  androidTestImplementation deps.espresso
+  androidTestImplementation deps.mockito
+  androidTestImplementation deps.dexmakerMockito
+  androidTestImplementation deps.hamcrest
 }
 
 uploadArchives {
