--- a/layout-hierarchy-common/build.gradle
+++ b/layout-hierarchy-common/build.gradle
@@ -37,7 +37,7 @@ android {
 dependencies {
   implementation project(':core')
 
-  androidTestApi deps.espresso
+  androidTestImplementation deps.espresso
 }
 
 uploadArchives {
