--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     exclude group: 'com.android.support', module: 'support-annotations'
     exclude group: 'com.google.code.findbugs', module: 'jsr305'
   }
+  androidTestImplementation deps.androidTestRules
 }
 
 screenshots {
