--- a/versions.gradle
+++ b/versions.gradle
@@ -8,8 +8,8 @@ ext {
 
   versions = [
       kotlin    : '1.2.71',
-      targetSdk : 26,
-      compileSdk: 26,
+      targetSdk : 28,
+      compileSdk: 28,
       minSdk    : 9,
   ]
 
@@ -41,6 +41,7 @@ ext {
       "dexmakerMockito"   : "com.crittercism.dexmaker:dexmaker-mockito:$dexmakerVersion",
 
       "espresso"          : "com.android.support.test.espresso:espresso-core:3.0.2",
+      "androidTestRules"  : "com.android.support.test:rules:1.0.2",
       "junit"             : "junit:junit:4.12",
       "mockito"           : "org.mockito:mockito-core:1.10.19",
       "hamcrest"          : "org.hamcrest:hamcrest-core:1.3",
