--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -52,6 +52,7 @@ android {
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "com.facebook.testing.screenshot.sample.ScreenshotTestRunner"
+    testInstrumentationRunnerArguments clearPackageData: 'true'
   }
 }
 
