--- a/versions.gradle
+++ b/versions.gradle
@@ -57,6 +57,8 @@ ext {
       dexmakerMockito     : "com.crittercism.dexmaker:dexmaker-mockito:$dexmakerVersion",
 
       espresso            : "androidx.test.espresso:espresso-core:3.1.0",
+      testRunner          : "androidx.test:runner:1.2.0",
+      orchestrator        : "androidx.test:orchestrator:1.2.0",
       androidTestRules    : "androidx.test:rules:1.1.0",
       junit               : "junit:junit:4.12",
       mockito             : "org.mockito:mockito-core:1.10.19",
